--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SoundGuessr - Animal Sound Game</title>
+    <title>Critter Calls - Animal Sound Game</title>
     <meta name="description" content="Test your knowledge by guessing animals from their sounds!">
   </head>
   <body>
