--- a/src/testing.html
+++ b/src/testing.html
@@ -13,11 +13,11 @@
   <h1>Animals and Sounds</h1>
   <div id="list"></div>
   <script type="module">
-    import animals from ./src/animals.ts;
-    const container = document.getElementById(list);
+    import { animals } from "./animals.ts";
+    const container = document.getElementById("list");
     animals.forEach(a => {
-      const div = document.createElement(div);
-      div.className = animal;
+      const div = document.createElement("div");
+      div.className = "animal";
       div.innerHTML = `<strong>${a.name}</strong> ${a.emoji} <audio controls src="${a.soundUrl}"></audio>`;
       container.appendChild(div);
     });
